--- a/views/home.html
+++ b/views/home.html
@@ -88,11 +88,21 @@
 
         <section class="section-4">
             <h3>VALORACIONES</h3>
-            <div class="valoracion">
-                <p class="foto-valoracion">X</p>
-                <h4>PROFESION</h4>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
-                sed quia consequuntur magni.</p>
+            <div class="section-valoracion">
+                <i class="fas fa-arrow-circle-left flecha"></i>
+                <div class="valoracion">
+                    <p class="foto-valoracion">X</p>
+                    <h4>PROFESION</h4>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+                </div>
+                <i class="fas fa-arrow-circle-right flecha"></i>
             </div>
         </section>
 
