--- a/views/creatucv.html
+++ b/views/creatucv.html
@@ -24,7 +24,7 @@
                     <li><a href = "" >Contacto</a></li>
                     <br>
                     <li class="ingresar"><a href = "/login" >Ingresar</a></li>
-                    <li class="registrarse"><a href = "/registrarse" >Registarse</a></li>
+                    <li class="registrarse"><a href = "/registrarse" >Registrarse</a></li>
                 </ul>  
             </nav>
             <div class="burger">
