--- a/views/home.html
+++ b/views/home.html
@@ -90,7 +90,7 @@
             <h3>VALORACIONES</h3>
             <div class="section-valoracion">
                 <i class="fas fa-arrow-circle-left flecha"></i>
-                <div class="valoracion">
+                <div class="valoracion-1">
                     <p class="foto-valoracion">X</p>
                     <h4>PROFESION</h4>
                     <div class="stars">
@@ -102,6 +102,30 @@
                     </div>
                     <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
                 </div>
+                <div class="valoracion-2">
+                    <p class="foto-valoracion">X</p>
+                    <h4>PROFESION</h4>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+                </div>
+                <div class="valoracion-3">
+                    <p class="foto-valoracion">X</p>
+                    <h4>PROFESION</h4>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+                </div> 
                 <i class="fas fa-arrow-circle-right flecha"></i>
             </div>
         </section>
