--- a/views/login.html
+++ b/views/login.html
@@ -16,16 +16,16 @@
            <img class="avatar" src="/images/azuletta_logo_header.png" alt="logo">  
            <h1>Iniciar sesión</h1>
            <form>
-            <label for="username">Nombre de Usuario</label>
-            <input type="text" placeholder="Ingresa Nombre de Usuario">
-            
-            <label for="password">Contraseña</label>
-            <input type="password" placeholder="Ingresa tu Contraseña">
+                <label for="username">Usuario</label>
+                <input type="text" name="user" placeholder="Ingresa tu usuario">
+                
+                <label for="password">Contraseña</label>
+                <input type="password" placeholder="Ingresa tu contraseña">
 
-            <input type="submit" value="Iniciar sesión">
+                <input type="submit" value="Iniciar sesión">
 
-            <a href="#">No recordás tu Contraseña?</a><br>
-            <a href="#">Registrarse</a>
+                <a href="#">¿Olvidaste tu contraseña?</a><br>
+                <a href="/registrarse">Registrate</a>
            </form>
         </div>
     
