--- a/views/registrarse.html
+++ b/views/registrarse.html
@@ -17,25 +17,24 @@
            <h1>Registrarse</h1>
            <form>
             <label for="username">Nombre y Apellido</label>
-            <input type="text" placeholder="Ingresa tu Nombre Completo">
+            <input type="text" placeholder="Ingresa tu nombre completo">
             
-            <label for="email">Coreo Electrónico</label>
+            <label for="email">Email</label>
             <input type="email" placeholder="Ingresa tu email">
 
-            <label for="email">Coreo Electrónico</label>
-            <input type="email" placeholder="Confirma tu email">
-
             <label for="password">Contraseña</label>
-            <input type="password" placeholder="Ingresa tu Contraseña">
+            <input type="password" placeholder="Ingresa tu contraseña">
 
-            <label for="password">Contraseña</label>
-            <input type="password" placeholder="Confirma tu Contraseña">
+            <label for="password">Confirma tu contraseña</label>
+            <input type="password" placeholder="Confirma tu contraseña">
 
-            <input type="submit" value="Registrarse"><br>
-
-            <a href="#">Ya estás registrado?</a>
             
            </form>
+           <div>
+                <input type="submit" value="Registrarse">
+           </div>
+
+            <a href="/login">Ya estás registrado?</a>
         </div>
     
     </main>
