Act. CSS y HTLM Crea tu cv

--- a/views/creatucv.html
+++ b/views/creatucv.html
@@ -34,8 +34,8 @@
 
     </header>
     <main>
-
-        <section class="silver">
+        <div class="box-padre">
+         <section class="silver">
 
             <article>
                 <img src ="/images/CVSilver.png" alt="CV Silver">
@@ -53,9 +53,9 @@
                 </div>
 
                     <div class="bottom-silver">
-                    <form action="" method="POST">
+                
                         <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
-                    </form> 
+                 
                 </div>   
             </article>
 
@@ -81,9 +81,8 @@
             </div>
             <div class="bottom-gold">
     
-                <form action="" method="POST">
-                    <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
-                </form> 
+                <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
+            
             </div> 
 
         </section>
@@ -104,15 +103,15 @@
                     <h5>$1500</h5>
                     </div>
                     <div class="bottom-black">
-                    <form action="" method="POST">
+                    
                         <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
-                    </form> 
+                    
                 </div> 
 
             </article>
 
         </section>
-
+    </div>
 
     </main>
 
