--- a/public/css/style.css
+++ b/public/css/style.css
@@ -337,21 +337,22 @@ section.section-4 .valoracion-3 p.foto-valoracion{
 /* CV SILVER*/
 
 body main section.silver {
-    margin: 50px 20px;
+    margin: 10px 0px;
     text-align: center;
     box-sizing: border-box;
+    background-color: white;
+    border: 2px solid #490b88;
+    border-radius: 10px;
 }
 
 body main section.silver div.titulo-silver
     {
 
-    font-size:30px ;
+    font-size:15px ;
     text-align: center;
     font-style: bold;
     color:#490b88;
-    margin-left: 100px;
-    margin-right: 100px;
-
+    margin: 0px auto;
     
 }
 
@@ -368,55 +369,54 @@ body main section.silver div.description-silver
 body main section.silver div.price-silver
     {
 
-    font-size: 30px;
-    color:#028090;
+    font-size: 25px;
+    color:#0a2342;
     margin-left: 100px;
     margin-right: 100px;
     margin-top: 10px;
 
 }
 
-body main section.silver div.bottom-silver
+body main section.silver div.bottom-silver input
     {
-
+    background-color: #490b88;
+    color: white;
+    border:#490b88;
+    border-radius: 5px;
     margin-top: 10px;
     width: center;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin: 10px auto;
+    padding: 5px;
 
 }
 
 main section.silver img{
     background-color: rgb(246, 246, 246);
-    border: 0px solid #b3b3b3;
-    border-radius: 0px;
     width: 30%;
     height: auto;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    margin-left: 100px;
-    margin-right: 100px;
-    padding: 12px;
+    margin: 5px auto;
 }
 
 /* CV GOLD */
 
 body main section.gold {
-    margin: 50px 20px;
+    margin: 10px 0px;
     text-align: center;
     box-sizing: border-box;
+    background-color: white;
+    border: 2px solid #490b88;
+    border-radius: 10px;
 }
 
 body main section.gold div.titulo-gold
     {
 
-    font-size:30px ;
-    text-align: center;
-    font-style: bold;
-    color:#490b88;
-    margin-left: 100px;
-    margin-right: 100px;
-
+        font-size:15px ;
+        text-align: center;
+        font-style: bold;
+        color:#490b88;
+        margin: 0px auto;
+        
     
 }
 
@@ -433,55 +433,55 @@ body main section.gold div.description-gold
 body main section.gold div.price-gold
     {
 
-    font-size: 30px;
-    color:#028090;
+    font-size: 25px;
+    color:#0a2342;
     margin-left: 100px;
     margin-right: 100px;
     margin-top: 10px;
 
 }
 
-body main section.gold div.bottom-gold
-    {
+body main section.gold div.bottom-gold input
 
-    margin-top: 10px;
-    width: center;
-    margin-left: 100px;
-    margin-right: 100px;
+{
+background-color: #490b88;
+color: white;
+border:#490b88;
+border-radius: 5px;
+margin-top: 10px;
+width: center;
+margin: 10px auto;
+padding: 5px;
 
 }
 
 main section.gold img{
     background-color: rgb(246, 246, 246);
-    border: 0px solid #b3b3b3;
-    border-radius: 0px;
     width: 30%;
     height: auto;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    margin-left: 100px;
-    margin-right: 100px;
-    padding: 12px;
+    margin: 5px auto;
 }
 
 /* CV BLACK */
 
 body main section.black {
-    margin: 50px 20px;
+    margin: 10px 0px;
     text-align: center;
     box-sizing: border-box;
+    background-color: white;
+    border: 2px solid #490b88;
+    border-radius: 10px;
 }
 
 body main section.black div.titulo-black
     {
 
-    font-size:30px ;
-    text-align: center;
-    font-style: bold;
-    color:#490b88;
-    margin-left: 100px;
-    margin-right: 100px;
-
+        font-size:15px ;
+        text-align: center;
+        font-style: bold;
+        color:#490b88;
+        margin: 0px auto;
+        
     
 }
 
@@ -498,35 +498,33 @@ body main section.black div.description-black
 body main section.black div.price-black
     {
 
-    font-size: 30px;
-    color:#028090;
+    font-size: 25px;
+    color:#0a2342;
     margin-left: 100px;
     margin-right: 100px;
     margin-top: 10px;
 
 }
 
-body main section.black div.bottom-black
-    {
+body main section.black div.bottom-black input
 
-    margin-top: 10px;
-    width: center;
-    margin-left: 100px;
-    margin-right: 100px;
+{
+background-color: #490b88;
+color: white;
+border:#490b88;
+border-radius: 5px;
+margin-top: 10px;
+width: center;
+margin: 10px auto;
+padding: 5px;
 
 }
 
 main section.black img{
     background-color: rgb(246, 246, 246);
-    border: 0px solid #b3b3b3;
-    border-radius: 0px;
     width: 30%;
     height: auto;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    margin-left: 100px;
-    margin-right: 100px;
-    padding: 12px;
+    margin: 5px auto;
 }
 
 
@@ -854,6 +852,23 @@ footer div.foto-redes{
     header section div.logo-name{
         flex-grow: 0.2;
     }
+
+    main .box-padre {
+
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        }
+
+    main .box-padre .silver, .gold, .black {
+        width: 80%;
+    }
+
+   
+
+
     
     /* CARRITO */
 
@@ -984,6 +999,36 @@ footer div.foto-redes{
         width: 300px;
         height: 300px;
     }
+
+
+    /* CREA TU CV */
+ 
+    main .box-padre {
+
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+
+    }
+
+    .box-padre section.silver {
+
+        width: 30%;
+    }
+
+    .box-padre section.gold {
+
+        width: 30%;
+    }
+
+    .box-padre section.black {
+
+        width: 30%;
+    }
+
+
 
     /* CARRITO */
 
