--- a/public/css/style.css
+++ b/public/css/style.css
@@ -360,8 +360,9 @@ body main section.silver div.description-silver
     {
 
     color:#755497;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin: auto;
+        width: 80%;
+    
 
 
 }
@@ -371,8 +372,7 @@ body main section.silver div.price-silver
 
     font-size: 25px;
     color:#0a2342;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin: 5px auto;
     margin-top: 10px;
 
 }
@@ -424,10 +424,9 @@ body main section.gold div.description-gold
     {
 
     color:#755497;
-    margin-left: 100px;
-    margin-right: 100px;
-
-
+    margin: auto;
+    width: 80%;
+    
 }
 
 body main section.gold div.price-gold
@@ -435,8 +434,7 @@ body main section.gold div.price-gold
 
     font-size: 25px;
     color:#0a2342;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin: 5px auto;
     margin-top: 10px;
 
 }
@@ -465,6 +463,7 @@ main section.gold img{
 /* CV BLACK */
 
 body main section.black {
+
     margin: 10px 0px;
     text-align: center;
     box-sizing: border-box;
@@ -473,54 +472,49 @@ body main section.black {
     border-radius: 10px;
 }
 
-body main section.black div.titulo-black
-    {
+body main section.black div.titulo-black {
 
-        font-size:15px ;
-        text-align: center;
-        font-style: bold;
-        color:#490b88;
-        margin: 0px auto;
+    font-size:15px ;
+    text-align: center;
+    font-style: bold;
+    color:#490b88;
+    margin: 0px auto;
         
     
 }
 
-body main section.black div.description-black
-    {
-
+body main section.black div.description-black {
+    
     color:#755497;
-    margin-left: 100px;
-    margin-right: 100px;
-
+    margin: auto;
+    width: 80%;
 
 }
 
-body main section.black div.price-black
-    {
+body main section.black div.price-black {
 
     font-size: 25px;
     color:#0a2342;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin: 5px auto;
     margin-top: 10px;
 
 }
 
-body main section.black div.bottom-black input
+body main section.black div.bottom-black input {
 
-{
-background-color: #490b88;
-color: white;
-border:#490b88;
-border-radius: 5px;
-margin-top: 10px;
-width: center;
-margin: 10px auto;
-padding: 5px;
+    background-color: #490b88;
+    color: white;
+    border:#490b88;
+    border-radius: 5px;
+    margin-top: 10px;
+    width: center;
+    margin: 10px auto;
+    padding: 5px;
 
 }
 
-main section.black img{
+main section.black img {
+
     background-color: rgb(246, 246, 246);
     width: 30%;
     height: auto;
@@ -1005,11 +999,11 @@ footer div.foto-redes{
  
     main .box-padre {
 
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
 
     }
 
