--- a/views/creatucv.html
+++ b/views/creatucv.html
@@ -34,6 +34,9 @@
 
     </header>
     <main>
+        <div class="titulo-packfav">
+            <h2>SELECCIONA TU PACK FAVORITO</h2>
+        </div>
         <div class="box-padre">
          <section class="silver">
 
@@ -56,6 +59,15 @@
                 
                         <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
                  
+                </div>
+                <div>
+                    <ul>
+                        <li>FUNCION 1</li>
+                        <li class="back-funcion">FUNCION 2</li>
+                        <li>FUNCION 3</li>
+                        <li  class="back-funcion">FUNCION 4</li>
+                        <li>FUNCION 5</li>
+                    </ul>
                 </div>   
             </article>
 
@@ -83,6 +95,17 @@
     
                 <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
             
+            </div>
+            <div>
+                <ul>
+                    <li>FUNCION 1</li>
+                    <li class="back-funcion">FUNCION 2</li>
+                    <li>FUNCION 3</li>
+                    <li  class="back-funcion">FUNCION 4</li>
+                    <li>FUNCION 5</li>
+                    <li class="back-funcion">FUNCION 6</li>
+
+                </ul>
             </div> 
 
             </article>
@@ -108,6 +131,18 @@
                     
                         <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
                     
+                </div>
+                <div>
+                    <ul>
+                        <li>FUNCION 1</li>
+                        <li class="back-funcion">FUNCION 2</li>
+                        <li>FUNCION 3</li>
+                        <li class="back-funcion">FUNCION 4</li>
+                        <li>FUNCION 5</li>
+                        <li class="back-funcion">FUNCION 6</li>
+                        <li>FUNCION 7</li>
+                        <li class="back-funcion">FUNCION 8</li>
+                    </ul>
                 </div> 
 
             </article>
