--- a/views/home.html
+++ b/views/home.html
@@ -41,7 +41,7 @@
 
         <section class="section-1">
 
-            <img src="/images/istockphoto-1173660637-612x612.jpg" alt="cv">
+            <img src="/images/foto1.png" alt="cv">
             <div class="description-1">
                 <h3>CREA TU CURRICULUM ONLINE</h3>
                 <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
