--- a/views/home.html
+++ b/views/home.html
@@ -60,7 +60,7 @@
             <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
                 sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
                 Neque porro quisquam est, qui dolorem.</p>
-
+            <img src="/images/business-leader-standing-arrow-holding-flag-flat-vector-illustration-cartoon-people-training-doing-business-plan-leadership-victory-challenge-concept_74855-9812.jpg" alt="">
         </section>
 
         <section class="section-3">
